--- a/app/views/admin/exams/_form.html.erb
+++ b/app/views/admin/exams/_form.html.erb
@@ -10,6 +10,7 @@
     <div class="col-sm-10">
       <label class="checkbox-inline"><%= f.radio_button :exam_type, 1 %> GWD</label>
       <label class="checkbox-inline"><%= f.radio_button :exam_type, 2 %> 770</label>
+      <label class="checkbox-inline"><%= f.radio_button :exam_type, 3 %> Prep</label>
     </div>
   </div>
   <div class="form-group">
