--- a/app/views/admin/exams/takes.html.erb
+++ b/app/views/admin/exams/takes.html.erb
@@ -6,12 +6,10 @@
 <table class="table table-bordered users-table">
   <thead>
     <tr>
-      <th></th>
-      <th>模考id</th>
-      <th>时间</th>
-      <th>成绩</th>
+      <th>模考</th>
+      <th>考试时间</th>
       <% Label.where(category: '题型').map(&:name).each do |label| %>
-        <th><%= label.name %></th>
+        <th><%= label %>正确率</th>
       <% end %>
     </tr>
   </thead>
@@ -19,9 +17,8 @@
     <% @takes.each do |take| %>
       <% take.calculate_data %>
       <tr data-id="<%= take.id %>">
-        <td><%= take.id %></td>
+        <td><%= take.exam.name %></td>
         <td><%= take.created_at.to_formatted_s(:date_and_time) %></td>
-        <td><%=  %></td>
         <% Label.where(category: '题型').map(&:name).each do |label| %>
           <th><%= take.accuracy_hash[label] %></th>
         <% end %>
