--- a/app/views/admin/exams/users.html.erb
+++ b/app/views/admin/exams/users.html.erb
@@ -1,8 +1,4 @@
-<h4>用户</h4>
-
-<div class="btn-group btn-group-sm" role="group" style="margin-bottom: 16px;">
-  <button class="btn btn-default js-add-to-user-group">加入用户组</button>
-</div>
+<h4>参加过模考的用户</h4>
 
 <div class="pull-right text-muted" style="margin-top:10px">找到 <%= @users.count %> 用户</div>
 
