--- a/app/views/admin/exams/_users_list.html.erb
+++ b/app/views/admin/exams/_users_list.html.erb
@@ -16,7 +16,7 @@
       <tr data-id="<%= user.id %>">
         <td><input type="checkbox"></td>
         <td><%= link_to user.id, takes_admin_exams_path(user_id: user.id)  %></td>
-        <td><%= user.nickname %></td>
+        <td><%= link_to user.nickname, takes_admin_exams_path(user_id: user.id) %></td>
         <td><%= user.created_at.to_formatted_s(:date_and_time) %></td>
         <td><%= user.mobile %></td>
         <td><%= user.takes.last.created_at.to_formatted_s(:date_and_time) %></td>
