--- a/app/views/admin/exams/_users_list.html.erb
+++ b/app/views/admin/exams/_users_list.html.erb
@@ -2,12 +2,12 @@
   <thead>
     <tr>
       <th></th>
-      <th>用户ID</th>
-      <th>用户昵称</th>
-      <th>注册时间</th>
+      <th style="width: 70px">用户ID</th>
+      <th style="width: 120px">用户昵称</th>
+      <th style="width: 130px">注册时间</th>
       <th>手机号</th>
-      <th>最后模考</th>
-      <th>模考次数</th>
+      <th style="width: 130px">最后模考</th>
+      <th style="width: 75px">模考次数</th>
       <th>用户组</th>
     </tr>
   </thead>
