show a video preview when edting exercises

--- a/app/views/admin/exercises/_form.html.erb
+++ b/app/views/admin/exercises/_form.html.erb
@@ -152,7 +152,8 @@
   </div>
 
   <% content_for :scripts do %>
-    <%= javascript_include_tag 'admin/courses' %>
+    <script src='//player.polyv.net/script/polyvplayer.min.js'></script>
+    <%= javascript_include_tag 'admin/exercises' %>
   <% end -%>
 
 <% end %>
