--- a/app/views/layouts/exam.html.erb
+++ b/app/views/layouts/exam.html.erb
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <%= csrf_meta_tags %>
   <%= stylesheet_link_tag 'exam_layout', media: 'all' %>
-  <%= javascript_include_tag "exams_controller" %>
+  <%= javascript_include_tag "exams_controller", "break" %>
   <%= yield :scripts %>
 </head>
 <body>
