--- a/app/assets/stylesheets/exams_controller.scss
+++ b/app/assets/stylesheets/exams_controller.scss
@@ -484,3 +484,23 @@ $yellow: #fefe00;
   }
 }
 
+#break-clock {
+  font-size: 100px;
+  text-align: center;
+  color: #316ccb;
+}
+
+#break-link {
+  background: #316ccb;
+  font-size: 18px;
+  color: white;
+  padding: 10px 60px;
+  margin-top: 32px;
+  display: inline-block;
+  text-decoration: none;
+  border-radius: 4px;
+
+  &:hover {
+    background-color: #407fe7;
+  }
+}
