--- a/app/views/exams/_intro_footer.html.erb
+++ b/app/views/exams/_intro_footer.html.erb
@@ -8,11 +8,13 @@
     <span><u>E</u>nd Exam</span>
   </a>
 
-  <% if @page_id != 14 %>
+  <% if @page_id.to_i != 15 %>
     <a class="btn-next right" href="<%= next_instruction_url(@exam, @page_id, @take) %>">
       <span><u>N</u>ext</span>
       <i></i>
     </a>
+  <% end %>
+  <% if @page_id.to_i != 14 && @page_id.to_i != 15 %>
     <a class="btn-skip right" href="javascript:;" data-url="<%= skip_instructions_url(@exam, @take) %>" data-take-id="<%= @take.id %>" data-exam-id="<%= @exam.id %>">
       <span>Skip</span>
     </a>
