--- a/app/views/exams/result.html.erb
+++ b/app/views/exams/result.html.erb
@@ -14,11 +14,11 @@
       <div id="time-chart" style="height: 350px;"></div>
       <div>
         <div class="left" style="width: 50%;">
-          <h3>Sub-section time management</h3>
+          <h3>单项时间</h3>
           <div id="subsection-time-mgmt" style="height: 350px;"></div>
         </div>
         <div class="left" style="width: 50%">
-          <h3>Sub-section right vs wrong</h3>
+          <h3>单项正确率</h3>
           <div id="subsection-right-wrong" style="height: 350px;"></div>
         </div>
       </div>
