--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -1,6 +1,8 @@
 <% if current_user %>
   <div class="login">
-    <%= link_to current_user.nickname, current_user %>
+    <a href="<%= user_path(current_user) %>">
+      <img src="<%= current_user.headimgurl %>" alt="">&nbsp;个人中心
+    </a>
     <%= link_to '退出登陆', logout_path, class: 'logout' %>
   </div>
 <% else %>
