--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -1,52 +1,53 @@
-<div class="bg-snow pb2">
-
-  <div class="container header-margin pt2">
-    <div class="clearfix card filters">
-      <span class="gray mr2">选择系列</span>
-      <a href="/courses">全部</a>
-      <a href="#">GWD系列</a>
-      <a href="#">770系列</a>
-    </div>
-  </div>
-
-  <div class="exams clearfix mb2">
-    <div class="container">
-      <div class="left bg-white p2 mt2 mb2 clearfix mini-quiz">
-        <h4><a href="http://www.mba.com/gmat-mini-quiz?utm_campaign=Global_All_Mini-Quiz_11Apr2016&utm_medium=referral&utm_source=gmat770" target="_blank">The GMAT mini quiz</a></h4>
-        <a href="http://www.mba.com/gmat-mini-quiz?utm_campaign=Global_All_Mini-Quiz_11Apr2016&utm_medium=referral&utm_source=gmat770" target="_blank">
-          <img src="http://7xtg0z.com2.z0.glb.clouddn.com/verbal.png" width="60">
-          <img src="http://7xtg0z.com2.z0.glb.clouddn.com/quant.png" width="60">
-        </a>
+<div class="bg-snow pb2 header-margin">
+  <div class="container clearfix">
+    <div style="width: 880px; float: left; background-color: white; margin-top: 24px; padding: 24px 32px;">
+      <h2 style="margin-top: 0;">模考练习</h2>
+      <p class="text-muted">建议大家还是以PREP和GWD为主要模考材料，因为其更接近真实考试题目。模考练习时大家不要过于在意分数，尽量控制好PACE时间养成控制做题PACE的好习惯。考满分模考练习不仅完全还原仿真考试的全过程，还为你提供设置每题/每科目最小时长方式帮你控制PACE。</p>
+      <div class="tabs">
+        <a href="#gwd" class="active">GWD系列</a>
+        <a href="#770">770系列</a>
       </div>
-      <% @exams.each do |exam| %>
-        <div class="left bg-white p2 mt2 mb2 clearfix">
-          <% if current_user %>
-            <%= link_to exam.name, exam_path(exam), class: 'h3' %>
-          <% else %>
-            <%= link_to exam.name, '#unauthorized', class: 'h3' %>
-          <% end -%>
-          <div class="h5 py1 gray">
-            <div>系列: <%= exam.exam_type_label %></div>
-            <div>练习人数: <%= exam.user_count %></div>
-            <div class="gray">
-              <span>平均错题数: </span>
-              <span>Verbal <%= exam.avg_num_of_wrong_verbal_exercises.nan? ? '-' : exam.avg_num_of_wrong_verbal_exercises %></span>
-              <% if exam.exam_type_label == '770' %>
-                <span>Quant <%= exam.avg_num_of_wrong_quant_exercises.nan? ? '-' : exam.avg_num_of_wrong_quant_exercises %></span>
-              <% end -%>
-            </div>
+      <p class="text-muted">TN24套的版本是来源于GWD31套，在GWD31套的基础之上，把重复的题目全部都去除了，并且对题目的顺序进行了更为合理的排序。虽然有24套题，我更愿意把它分成24=21+3。因为最后三套的题目只有阅读/逻辑是新的，语法题目大部分来自Prep1 (SC题目不够了)。所以大家不要把22/23/24留到最后模考。 前21套里面1-13应该是携隐13套，题目相对有些老，14-21感觉比较新一些。</p>
+      <div class="exams clearfix mb2">
+        <div class="container">
+          <div class="left bg-white p2 mt2 mb2 clearfix mini-quiz">
+            <h4><a href="http://www.mba.com/gmat-mini-quiz?utm_campaign=Global_All_Mini-Quiz_11Apr2016&utm_medium=referral&utm_source=gmat770" target="_blank">The GMAT mini quiz</a></h4>
+            <a href="http://www.mba.com/gmat-mini-quiz?utm_campaign=Global_All_Mini-Quiz_11Apr2016&utm_medium=referral&utm_source=gmat770" target="_blank">
+              <img src="http://7xtg0z.com2.z0.glb.clouddn.com/verbal.png" width="40">
+              <img src="http://7xtg0z.com2.z0.glb.clouddn.com/quant.png" width="40">
+            </a>
           </div>
+          <% @exams.each do |exam| %>
+            <div class="left bg-white p2 mt2 mb2 clearfix">
+              <% if current_user %>
+                <%= link_to exam.name, exam_path(exam) %>
+              <% else %>
+                <%= link_to exam.name, '#unauthorized' %>
+              <% end -%>
+              <div class="exam-info">
+                <div>练习人数: <%= exam.user_count %></div>
+                <div>
+                  <span>平均错题数: </span>
+                  <span>Verbal <%= exam.avg_num_of_wrong_verbal_exercises.nan? ? '-' : exam.avg_num_of_wrong_verbal_exercises %></span>
+                  <% if exam.exam_type_label == '770' %>
+                    <span>Quant <%= exam.avg_num_of_wrong_quant_exercises.nan? ? '-' : exam.avg_num_of_wrong_quant_exercises %></span>
+                  <% end -%>
+                </div>
+              </div>
+            </div>
+          <% end -%>
         </div>
-      <% end -%>
+      </div>
+    </div>
+    <div style="width: 280px; float: right; margin-top: 24px; padding: 24px 32px;">
     </div>
   </div>
-
 </div>
 
 <script>
   <% if flash[:error].present? %>
     layer.msg("<%= flash[:error] %>")
-  <% end %>  
+  <% end %>
   $('[href="#unauthorized"]').on('click', function(e){
     layer.msg('您必须先登录才能查看模考内容');
   });
