--- a/app/assets/stylesheets/exams_controller.scss
+++ b/app/assets/stylesheets/exams_controller.scss
@@ -45,6 +45,7 @@ $yellow: #fefe00;
       float: right;
       margin-top: -40px;
       padding-right: 20px;
+      cursor: pointer;
 
       i {
         width: 20px;
