--- a/app/views/exams/_exercise_header.html.erb
+++ b/app/views/exams/_exercise_header.html.erb
@@ -1,7 +1,13 @@
 <div class="header">
   <h1><%= @exam.name %></h1>
   <div class="right">
-    <div class="clock" id="clock"><i></i>Time cost <span class="minutes"><%= @exam.estimated_time %></span>:<span class="seconds">00</span></div>
-    <div class="location"><i></i>Location <%= current_location(@exam, @exercise) %> of <%= total(@exam, @exercise) %></div>
+    <div class="clock" id="clock">
+      <i></i>
+      <span class="to-hide">Time cost <span class="minutes"><%= @exam.estimated_time %></span>:<span class="seconds">00</span></span>
+    </div>
+    <div class="location">
+      <i></i>
+      <span class="to-hide">Location <%= current_location(@exam, @exercise) %> of <%= total(@exam, @exercise) %></span>
+    </div>
   </div>
 </div>
