update charting library to echarts

--- a/app/views/exams/result.html.erb
+++ b/app/views/exams/result.html.erb
@@ -11,7 +11,7 @@
           <li><a href="#math">Math</a></li>
         </ul>
       <% end -%>
-      <div id="time-chart" style="height: 350px;"></div>
+      <div id="time-chart" style="width: 1190px; height: 350px;"></div>
       <div>
         <div class="left" style="width: 50%;">
           <h3>单项时间</h3>
