update exam page copy

--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -2,12 +2,12 @@
   <div class="container clearfix">
     <div style="width: 880px; float: left; background-color: white; margin-top: 24px; padding: 24px 32px;">
       <h2 style="margin-top: 0;">模考练习</h2>
-      <p class="text-muted">建议大家还是以PREP和GWD为主要模考材料，因为其更接近真实考试题目。模考练习时大家不要过于在意分数，尽量控制好PACE时间养成控制做题PACE的好习惯。考满分模考练习不仅完全还原仿真考试的全过程，还为你提供设置每题/每科目最小时长方式帮你控制PACE。</p>
+      <p class="text-muted">建议大家考前一定要模考，推荐材料PREP>TN 24/770系列。模考请不要在意分数，关注点在整套模考的pace的把握以及找到适合自己可以应用到实战的考试节奏，其次再是正确率。本站模考还原仿真模考全过程，并且有ESR报告告知模考PACE和各科正确率，以及配有770团队独家撰写模考解析。</p>
       <div class="tabs">
-        <a href="#gwd" class="active">GWD系列</a>
+        <a href="#gwd" class="active">GWD-TN-24系列</a>
         <a href="#770">770系列</a>
       </div>
-      <p class="text-muted">TN24套的版本是来源于GWD31套，在GWD31套的基础之上，把重复的题目全部都去除了，并且对题目的顺序进行了更为合理的排序。虽然有24套题，我更愿意把它分成24=21+3。因为最后三套的题目只有阅读/逻辑是新的，语法题目大部分来自Prep1 (SC题目不够了)。所以大家不要把22/23/24留到最后模考。 前21套里面1-13应该是携隐13套，题目相对有些老，14-21感觉比较新一些。</p>
+      <p class="text-muted">GWD-TN-24 是基于GWD31套的进阶版,并剔除了重复的题目。其中最后三套的题目只有阅读/逻辑是新的，语法题目大部分来自Prep1 (SC题目不够了)。因此不用把22/23/24这三套留到最后模考。前面1-13的套题目会相对陈旧，14-21会相对新一点。</p>
       <div class="exams clearfix mb2">
         <div class="container">
           <div class="left bg-white p2 mt2 mb2 clearfix mini-quiz">
