--- a/app/views/exams/result.html.erb
+++ b/app/views/exams/result.html.erb
@@ -50,7 +50,7 @@
         </ul>
       <% end -%>
       <div class="clearfix js-tab" data-tab="verbal">
-        <div class="">
+        <div style="margin-top: 16px;">
           <label><input type="radio" name="range" value="all" checked=true> 全部题目 &nbsp;&nbsp;</label>
           <label><input type="radio" name="range" value="sc"> 只看SC  &nbsp;&nbsp;</label>
           <label><input type="radio" name="range" value="cr"> 只看CR  &nbsp;&nbsp;</label>
