--- a/app/views/exams/_exercise_header.html.erb
+++ b/app/views/exams/_exercise_header.html.erb
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" data-exam-id="<%= @exam.id %>" data-take-id="<%= @take.id %>">
   <h1><%= @exam.name %></h1>
   <div class="right">
     <div class="clock" id="clock">
