introduce auth for free courses

--- a/app/views/courses/free.html.erb
+++ b/app/views/courses/free.html.erb
@@ -13,7 +13,9 @@
   <div class="courses clearfix mb2">
     <div class="container">
       <% if @courses.count > 0 %>
-        <%= render @courses %>
+        <% @courses.each do |course| %>
+          <%= render partial: 'courses/course', locals: {course: course, auth: true} %>
+        <% end -%>
       <% else %>
         <div class="gray p4 center h3">没有课程</div>
       <% end -%>
@@ -21,3 +23,9 @@
   </div>
 
 </div>
+
+<script type="text/javascript">
+  $('[href="#unauthorized"]').on('click', function(){
+    layer.msg('您必须先登录才能查看');
+  });
+</script>
